Closed Bug 448200 Opened 16 years ago Closed 9 years ago

miscellaneous trivial bugs to be fixed in NSS 3.12.x

Categories

(NSS :: Libraries, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: nelson, Unassigned)

References

Details

Attachments

(1 file, 2 obsolete files)

Often, NSS and NSPR developers find trivial bugs (misspellings, etc.) in 
the source code, and don't really want to file a bug just to fix them.
This bug should serve as an ongoing place to record such bugs, and attach
patches for them, for review.
Someone frequently misspells deprecated and function in a certain way, 
often in the same line.  This patch fixes all those particular misspellings.
Attachment #331521 - Flags: review?(rrelyea)
Attachment #331521 - Flags: review?(julien.pierre.boogz)
Attachment #331521 - Flags: review?(julien.pierre.boogz) → review+
Attachment #331521 - Attachment description: fix systemic misspellings of deprecated and function → fix systemic misspellings of deprecated and function (checked in on trunk)
Attachment #331521 - Flags: review?(rrelyea)
The string PBKFD2 is a misspelling of PBKDF2.  That misspelling appears in
several places in NSS, including function names.  Somehow this escaped 
review.  The checkin comment does not cite any reviewer.  Please fix soon.
Attachment #785352 - Flags: review?(rrelyea)
+ Fix some style issues
Attachment #785352 - Attachment is obsolete: true
Attachment #785352 - Flags: review?(rrelyea)
Attachment #8395497 - Flags: review?(rrelyea)
Depends on: 1134455
Attachment 331521 [details] [diff] was checked in by changesets below.
https://hg.mozilla.org/projects/nss/rev/64eca85b54f2
https://hg.mozilla.org/projects/nspr/rev/220f98386afb

Attachment 8395497 [details] [diff] was fixed by bug 1134455.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Comment on attachment 8395497 [details] [diff] [review]
Fix misspellings of PBKDF2: Proposed Patch v2

(In reply to Takanori MATSUURA from comment #5)
> Attachment 8395497 [details] [diff] was fixed by bug 1134455.

Yup, thanks. Marking this as obsolete.
Attachment #8395497 - Attachment is obsolete: true
Attachment #8395497 - Flags: review?(rrelyea)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: