Bug 448200. fix systemic misspellings of deprecated and function, r=julien.pierre