security/nss/lib/certdb/stanpcertdb.c
@@ -979,7 +979,7 @@ CERT_FindSMimeProfile(CERTCertificate *cert)
 }
 
 /*
- * depricated functions that are now just stubs.
+ * deprecated functions that are now just stubs.
  */
 /*
  * Close the database
@@ -987,7 +987,7 @@ CERT_FindSMimeProfile(CERTCertificate *cert)
 void
 __CERT_ClosePermCertDB(CERTCertDBHandle *handle)
 {
-    PORT_Assert("CERT_ClosePermCertDB is Depricated" == NULL);
+    PORT_Assert("CERT_ClosePermCertDB is Deprecated" == NULL);
     return;
 }
 
@@ -995,14 +995,14 @@ SECStatus
 CERT_OpenCertDBFilename(CERTCertDBHandle *handle, char *certdbname,
                         PRBool readOnly)
 {
-    PORT_Assert("CERT_OpenCertDBFilename is Depricated" == NULL);
+    PORT_Assert("CERT_OpenCertDBFilename is Deprecated" == NULL);
     return SECFailure;
 }
 
 SECItem *
 SECKEY_HashPassword(char *pw, SECItem *salt)
 {
-    PORT_Assert("SECKEY_HashPassword is Depricated" == NULL);
+    PORT_Assert("SECKEY_HashPassword is Deprecated" == NULL);
     return NULL;
 }
 
@@ -1011,7 +1011,7 @@ __CERT_TraversePermCertsForSubject(CERTCertDBHandle *handle,
                                  SECItem *derSubject,
                                  void *cb, void *cbarg)
 {
-    PORT_Assert("CERT_TraversePermCertsForSubject is Depricated" == NULL);
+    PORT_Assert("CERT_TraversePermCertsForSubject is Deprecated" == NULL);
     return SECFailure;
 }
 
@@ -1020,7 +1020,7 @@ SECStatus
 __CERT_TraversePermCertsForNickname(CERTCertDBHandle *handle, char *nickname,
                                   void *cb, void *cbarg)
 {
-    PORT_Assert("CERT_TraversePermCertsForNickname is Depricated" == NULL);
+    PORT_Assert("CERT_TraversePermCertsForNickname is Deprecated" == NULL);
     return SECFailure;
 }
 
